Cascading Change Log

2.0.0 [unreleased]

  Fixed issue where the c.p.a.AB.CompositeFunction was not getting flushed when planned into a reduce task.

  Renamed c.p.a.Shape to c.p.a.Retain, as it retains given fields, and created c.p.a.Discard to perform the opposite
  function or discarding given fields.

  Added c.o.NoOp operation to allow fields to be dropped from a stream when used with c.t.Fields.SWAP.

  Added c.T.Fields.NONE to denote no fields in a c.t.Tuple.

  Added shutdown hook for the c.c.Cascade class so during jvm shutdown #stop() will be called forcing proper state
  change.

  Changed #stop() to push from c.c.Cascade down through c.f.Flow and c.f.p.FlowStep instances.

  Added new JUnit runner for injecting platform dependencies into c.t.PlatformTestCase subclasses. Subclasses should
  use c.t.PlatformRunner.Platform Annotation to specify relevant c.t.TestPlatform instances.

  Changed test and assertion helper methods on c.t.CascadingTestCase static to remove subclassing requirement.

  Upgraded to support JUnit 4.8.x.

  Changed license from GPLv3 to APLv2.

  Changed c.f.Flow to prevent #complete() from returning while #stop() is executing. Should prevent certain kinds
  of race conditions when a shutdown hook is used, from a different thread, to stop running flows.

  Added support for gradle.

  Renamed c.f.FlowSkipIfSinkStale to FlowSkipIfSinkNotStale to match the semantics.

  Added support for c.f.Flow tags via the c.f.FlowDef class.

  Added c.f.FlowDef to allow for creating flow definitions via a fluent builder interface.

  Added STARTED and SUBMITTED status to c.s.CascadingStats to properly track when a job is submitted vs when it actually begins
  processing after being queued.

  Added management interfaces for capturing detailed statistics.

  Decoupled core from Apache Hadoop, removed stack based streaming model. Use c.f.h.HadoopFlowConnector to plan
  Hadoop specific flows.
